datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["fullTextIndex"]
}

model Org {
  id          String        @id @default(cuid())
  icon        String
  name        String
  userId      String
  users        UsersOnOrgs[]

  @@map("orgs")
}

model User {
  id          String        @id @default(cuid())
  email       String        @unique
  password    String
  salt        String
  orgs       UsersOnOrgs[]

  @@map("users")
}

model Channel {
  id          String        @id @default(cuid())
  name        String
  orgId       String

  @@map("channels")
}

model UsersOnOrgs {
  user   User   @relation(fields: [userId], references: [id])
  userId String
  org    Org    @relation(fields: [orgId], references: [id])
  orgId  String

  @@id([orgId, userId])

  @@map("users_on_orgs")
}